--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# IntellijIdea files
-.idea/
-#ignore libs folder
-libs/
 #ignore node_modules folder
 node_modules/
+.bashrc
+gulpfile.js
+yarn.lock
