--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "gulp",
+  "name": "mamon-template",
   "version": "1.0.0",
+  "description": "mamon template",
   "main": "index.js",
-  "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^9.5.0",
-    "browser-sync": "^2.26.3",
+    "autoprefixer": "^9.7.6",
+    "browser-sync": "^2.26.7",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
-    "gulp": "^4.0.0",
-    "gulp-csscomb": "^3.0.8",
+    "gulp": "^4.0.2",
+    "gulp-csscomb": "^3.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
-    "prettier": "^1.19.1",
-    "sort-css-media-queries": "^1.4.3"
-  }
+    "prettier": "^2.0.4",
+    "rename": "^1.0.4",
+    "sort-css-media-queries": "^1.5.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-terser": "^1.2.0",
+    "gulp-uglify": "^3.0.2"
+  },
+  "dependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
